--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -72,117 +72,111 @@
                     android:id="@+id/lyPayMethod"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:paddingBottom="@dimen/_10sdp">
+                    android:layout_marginTop="@dimen/_10sdp">
 
                     <ImageView
                         android:id="@+id/imgBankIcon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_centerVertical="true"
                         android:src="@drawable/ic_bankactive" />
 
                     <LinearLayout
-                        android:id="@+id/lyCDetails"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_toLeftOf="@+id/imgArrow"
                         android:layout_toRightOf="@+id/imgBankIcon"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:visibility="visible">
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:id="@+id/lyCDetails"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
+                            android:visibility="visible">
+
+                            <TextView
+                                android:id="@+id/tvPayHead"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:singleLine="true"
+                                android:text="Bank of America"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_12ssp" />
+
+                            <TextView
+                                android:id="@+id/tvAccNumber"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:singleLine="true"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_11ssp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/lyBDetails"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
+                            android:visibility="gone">
+
+                            <TextView
+                                android:id="@+id/tvBankName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:singleLine="true"
+                                android:text="Bank of America"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_12ssp" />
+
+                            <TextView
+                                android:id="@+id/tvBAccNumber"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:text="••••5359"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_11ssp" />
+                        </LinearLayout>
 
                         <TextView
-                            android:id="@+id/tvPayHead"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/tvLimit"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:singleLine="true"
-                            android:text="Bank of America"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:fontFamily="@font/opensans_regular"
+                            android:textColor="@color/xdark_gray"
+                            android:textSize="@dimen/_9ssp"
+                            android:visibility="gone"/>
 
                         <TextView
-                            android:id="@+id/tvAccNumber"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/tvFeePer"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/_5sdp"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:singleLine="true"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_11ssp" />
+                            android:layout_marginTop="@dimen/_2sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:text=""
+                            android:textColor="@color/xdark_gray"
+                            android:textSize="@dimen/_9ssp"
+                            android:visibility="gone"/>
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/lyBDetails"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_toLeftOf="@+id/imgArrow"
-                        android:layout_toRightOf="@+id/imgBankIcon"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:visibility="gone">
-
-                        <TextView
-                            android:id="@+id/tvBankName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:singleLine="true"
-                            android:text="Bank of America"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp" />
-
-                        <TextView
-                            android:id="@+id/tvBAccNumber"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/_5sdp"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:text="••••5359"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_11ssp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/tvLimit"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/lyCDetails"
-                        android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_toLeftOf="@+id/imgArrow"
-                        android:layout_toRightOf="@+id/imgBankIcon"
-                        android:fontFamily="@font/opensans_regular"
-                        android:textColor="@color/xdark_gray"
-                        android:textSize="@dimen/_9ssp" />
-
-                    <TextView
-                        android:id="@+id/tvFeePer"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/tvLimit"
-                        android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_2sdp"
-                        android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_toLeftOf="@+id/imgArrow"
-                        android:layout_toRightOf="@+id/imgBankIcon"
-                        android:fontFamily="@font/opensans_regular"
-                        android:text=""
-                        android:textColor="@color/xdark_gray"
-                        android:textSize="@dimen/_9ssp"/>
 
                     <ImageView
                         android:id="@+id/imgArrow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:src="@drawable/ic_chevron_right" />
                 </RelativeLayout>
@@ -266,7 +260,7 @@
                                     android:text=" CYN"
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_12ssp"
-                                    android:visibility="gone"/>
+                                    android:visibility="gone" />
 
                             </LinearLayout>
 
@@ -302,7 +296,7 @@
                         android:text="Amount entered exceeds your daily limit"
                         android:textColor="@color/error"
                         android:textSize="@dimen/_10ssp"
-                        android:visibility="invisible"/>
+                        android:visibility="invisible" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -324,7 +318,7 @@
             android:fontFamily="@font/opensans_regular"
             android:text="Exchange Rate: 1.00 CYN = $ 1.00"
             android:textColor="@color/xdark_gray"
-            android:textSize="@dimen/_9ssp"/>
+            android:textSize="@dimen/_9ssp" />
 
         <com.coyni.mapp.utils.keyboards.CustomKeyboard
             android:id="@+id/ckb"
