--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -84,11 +84,12 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginLeft="@dimen/_7sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_toLeftOf="@+id/imgArrow"
                         android:layout_toRightOf="@+id/imgBankIcon"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_centerVertical="true">
 
                         <LinearLayout
                             android:id="@+id/lyCDetails"
