--- a/app/src/main/res/layout/activity_additional_action_upload.xml
+++ b/app/src/main/res/layout/activity_additional_action_upload.xml
@@ -54,16 +54,16 @@
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_16ssp" />
 
-            <TextView
-                android:id="@+id/adminMessageTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="@string/act_rqrd_description"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
+<!--            <TextView-->
+<!--                android:id="@+id/adminMessageTV"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginHorizontal="@dimen/_21sdp"-->
+<!--                android:layout_marginTop="@dimen/_16sdp"-->
+<!--                android:fontFamily="@font/opensans_regular"-->
+<!--                android:text="@string/act_rqrd_description"-->
+<!--                android:textColor="@color/primary_black"-->
+<!--                android:textSize="@dimen/_11ssp" />-->
 
 
             <LinearLayout
@@ -147,8 +147,19 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_19sdp"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/adminMessageTV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/_21sdp"
+                        android:layout_marginTop="@dimen/_16sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="@string/act_rqrd_description"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp"
+                        android:layout_marginBottom="@dimen/_19sdp"/>
 
                     <TextView
                         android:layout_width="match_parent"
