--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -56,14 +56,14 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16ssp" />
 
-                <TextView
-                    android:id="@+id/adminMessageTV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_15sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp" />
+<!--                <TextView-->
+<!--                    android:id="@+id/adminMessageTV"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginBottom="@dimen/_15sdp"-->
+<!--                    android:fontFamily="@font/opensans_regular"-->
+<!--                    android:textColor="@color/primary_black"-->
+<!--                    android:textSize="@dimen/_11ssp" />-->
             </LinearLayout>
 
             <ScrollView
@@ -76,6 +76,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/adminMessageTV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/_15sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp"
+                        android:layout_marginHorizontal="@dimen/_21sdp"/>
 
                     <LinearLayout
                         android:id="@+id/ll_document_required"
