--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -108,7 +108,6 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/_12sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/please_upload_required_documents_below"
                                 android:textColor="@color/dark_grey"
@@ -122,6 +121,7 @@
                         android:id="@+id/website_revision_required"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_10sdp"
                         android:orientation="vertical"
                         android:visibility="gone">
