--- a/app/src/main/res/layout/additional_document_item.xml
+++ b/app/src/main/res/layout/additional_document_item.xml
@@ -25,6 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_12sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:fontFamily="@font/opensans_semibold"
@@ -32,87 +33,96 @@
                 android:textSize="@dimen/_11ssp" />
 
             <LinearLayout
-                android:id="@+id/sscFileUploadLL"
+                android:id="@+id/containerLL"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/_11sdp"
-                android:layout_marginEnd="@dimen/_11sdp"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:background="@drawable/bg_white_color_light_border"
-                android:orientation="horizontal"
-                android:paddingStart="@dimen/_8sdp"
-                android:paddingTop="@dimen/_13sdp"
-                android:paddingBottom="@dimen/_14sdp">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_6sdp"
-                    android:src="@drawable/ic_upload" />
+                <!--                <LinearLayout-->
+                <!--                    android:id="@+id/sscFileUploadLL"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="match_parent"-->
+                <!--                    android:layout_marginStart="@dimen/_11sdp"-->
+                <!--                    android:layout_marginEnd="@dimen/_11sdp"-->
+                <!--                    android:layout_marginBottom="@dimen/_5sdp"-->
+                <!--                    android:background="@drawable/bg_white_color_light_border"-->
+                <!--                    android:orientation="horizontal"-->
+                <!--                    android:paddingStart="@dimen/_8sdp"-->
+                <!--                    android:paddingTop="@dimen/_13sdp"-->
+                <!--                    android:paddingBottom="@dimen/_14sdp"-->
+                <!--                    android:visibility="gone">-->
 
-                <TextView
-                    android:id="@+id/sscuploadFileTV"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:layout_marginEnd="@dimen/_50sdp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/opensans_regular"
-                    android:text="@string/upload_file"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_9ssp"
-                    android:visibility="visible" />
+                <!--                    <ImageView-->
+                <!--                        android:layout_width="wrap_content"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_marginEnd="@dimen/_6sdp"-->
+                <!--                        android:src="@drawable/ic_upload" />-->
 
-                <LinearLayout
-                    android:id="@+id/sscfileUploadedLL"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:visibility="gone">
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/sscuploadFileTV"-->
+                <!--                        android:layout_width="0dp"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_gravity="center"-->
+                <!--                        android:layout_marginStart="@dimen/_5sdp"-->
+                <!--                        android:layout_marginEnd="@dimen/_50sdp"-->
+                <!--                        android:layout_weight="1"-->
+                <!--                        android:fontFamily="@font/opensans_regular"-->
+                <!--                        android:text="@string/upload_file"-->
+                <!--                        android:textColor="@color/primary_black"-->
+                <!--                        android:textSize="@dimen/_9ssp"-->
+                <!--                        android:visibility="visible" />-->
 
-                    <LinearLayout
-                        android:id="@+id/uploadedSucess"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/_5sdp"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:visibility="visible">
+                <!--                    <LinearLayout-->
+                <!--                        android:id="@+id/sscfileUploadedLL"-->
+                <!--                        android:layout_width="wrap_content"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_weight="1"-->
+                <!--                        android:gravity="center"-->
+                <!--                        android:visibility="gone">-->
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_1sdp"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:gravity="center"
-                            android:text="Uploaded"
-                            android:textColor="@color/primary_color"
-                            android:textSize="@dimen/_10ssp" />
+                <!--                        <LinearLayout-->
+                <!--                            android:id="@+id/uploadedSucess"-->
+                <!--                            android:layout_width="wrap_content"-->
+                <!--                            android:layout_height="match_parent"-->
+                <!--                            android:layout_marginLeft="@dimen/_5sdp"-->
+                <!--                            android:layout_weight="1"-->
+                <!--                            android:orientation="vertical"-->
+                <!--                            android:visibility="visible">-->
 
-                        <TextView
-                            android:id="@+id/sscfileUpdatedOnTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
-                            android:text="jjhgfddfghjkhg"
-                            android:textColor="@color/dark_grey"
-                            android:textSize="@dimen/_8ssp" />
+                <!--                            <TextView-->
+                <!--                                android:layout_width="wrap_content"-->
+                <!--                                android:layout_height="wrap_content"-->
+                <!--                                android:layout_marginBottom="@dimen/_1sdp"-->
+                <!--                                android:fontFamily="@font/opensans_semibold"-->
+                <!--                                android:gravity="center"-->
+                <!--                                android:text="Uploaded"-->
+                <!--                                android:textColor="@color/primary_color"-->
+                <!--                                android:textSize="@dimen/_10ssp" />-->
 
-                    </LinearLayout>
+                <!--                            <TextView-->
+                <!--                                android:id="@+id/sscfileUpdatedOnTV"-->
+                <!--                                android:layout_width="wrap_content"-->
+                <!--                                android:layout_height="wrap_content"-->
+                <!--                                android:fontFamily="@font/opensans_regular"-->
+                <!--                                android:text="jjhgfddfghjkhg"-->
+                <!--                                android:textColor="@color/dark_grey"-->
+                <!--                                android:textSize="@dimen/_8ssp" />-->
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:gravity="center"
-                        android:paddingTop="@dimen/_5sdp"
-                        android:paddingBottom="@dimen/_5sdp"
-                        android:src="@drawable/ic_complete" />
+                <!--                        </LinearLayout>-->
 
-                </LinearLayout>
+                <!--                        <ImageView-->
+                <!--                            android:layout_width="wrap_content"-->
+                <!--                            android:layout_height="wrap_content"-->
+                <!--                            android:layout_marginEnd="@dimen/_10sdp"-->
+                <!--                            android:gravity="center"-->
+                <!--                            android:paddingTop="@dimen/_5sdp"-->
+                <!--                            android:paddingBottom="@dimen/_5sdp"-->
+                <!--                            android:src="@drawable/ic_complete" />-->
 
+                <!--                    </LinearLayout>-->
+
+
+                <!--                </LinearLayout>-->
 
             </LinearLayout>
 
@@ -123,7 +133,6 @@
                 android:layout_marginStart="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_11sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
                 android:orientation="horizontal"
                 android:paddingVertical="@dimen/_5sdp">
 
