--- a/app/src/main/res/layout/activity_pay_to_merchant.xml
+++ b/app/src/main/res/layout/activity_pay_to_merchant.xml
@@ -130,12 +130,14 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <RelativeLayout
+                        <LinearLayout
+                            android:id="@+id/lyamountview1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_12sdp"
                             android:background="@color/white"
                             android:gravity="center"
+                            android:orientation="horizontal"
                             android:paddingStart="@dimen/_20sdp"
                             android:paddingEnd="@dimen/_30sdp">
 
@@ -200,7 +202,7 @@
                                 android:layout_marginLeft="@dimen/_7sdp"
                                 android:layout_marginTop="@dimen/_8sdp"
                                 android:src="@drawable/ic_download" />
-                        </RelativeLayout>
+                        </LinearLayout>
 
                         <TextView
                             android:id="@+id/tvError"
